--- a/styles.css
+++ b/styles.css
@@ -265,12 +265,27 @@ main {
 .manuscript {
     width: 100%; /* Full width */
     background-color: #ffffff;
-    margin: 10px 0;
+    margin: 8px 0;
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
+    line-height: 1.2;
+
 }
+.manuscript h3 {
+    margin-bottom: 0.3em;
+    margin-top: 0.2em; /* Reduce space below the shelfmark */
+    margin-left: 0.1em;
+}
+
+.manuscript p {
+    margin-top: 0; /* Remove space above the library name */
+    margin-bottom: 0.2em;
+    font-size: 0.8em;
+    margin-left: 0.1em;
+}
+
 
 /* Individual manuscript pages */
 #manuscript-details {
