--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,21 @@ main {
     line-height: 1.2;
 
 }
+
+/* Hover effect for manuscript list items */
+.manuscript:hover {
+    background-color: #eef5ff; /* Light blue background on hover */
+    transform: translateY(-2px); /* Slight lift effect */
+    transition: background-color 0.3s, transform 0.3s; /* Smooth animation */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* Slightly more prominent shadow on hover */
+}
+
+
+.manuscript li:hover {
+    background-color: #eef5ff; /* Light blue background on hover */
+    transform: translateY(-2px); /* Slight lift effect */
+}
+
 .manuscript h3 {
     margin-bottom: 0.3em;
     margin-top: 0.2em; /* Reduce space below the shelfmark */
@@ -659,6 +674,7 @@ th {
     font-weight: bold; /* Make the text bold */
     text-align: center; /* Center text */
     border-radius: 5px; /* Rounded corners for the buttons */
+    font-size:0.9em;
 }
 
 /* Style for the active tab button */
